--- a/site_static/app/views/static_pages/about_me.html.erb
+++ b/site_static/app/views/static_pages/about_me.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
-    <h1> ME</h1>
-    <p>Find me in app/views/static_pages/about.html.erb</p>
+    <h1>it's Hari</h1>
+    <p>⛵️ Mousaillon de la session 4 avec The Hacking Project</p>
 </div>
