--- a/site_static/app/views/static_pages/about_us.html.erb
+++ b/site_static/app/views/static_pages/about_us.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
     <h1>Us</h1>
-    <p>Find me in app/views/static_pages/about.html.erb</p>
+    <p>Ce site a été fait par @Tinosam et @Hari</p>
 </div>
