--- a/site_static/app/views/static_pages/contact.html.erb
+++ b/site_static/app/views/static_pages/contact.html.erb
@@ -1,4 +1,7 @@
 <div class="container">
 <h1>Contact</h1>
-<p>Find me in app/views/static_pages/about.html.erb</p>
-</div>
+<a href= "https://thehackingproject.slack.com"><p> Hey there ! Ici c'est la TeamMada </p></a>
+<p> Avec @Hari</p>
+<p>Et @tinosam !</p>
+<p>Contactez nous sur slack</p>
+</div> 
