--- a/site_static/app/views/static_pages/about.html.erb
+++ b/site_static/app/views/static_pages/about.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
-    <h1>StaticPages#about</h1>
-    <p>Find me in app/views/static_pages/about.html.erb</p>
+    <h1>Un site Static</h1>
+    <a href= "https://github.com/tinosam/real_project_onrail"><p>Vous pouvez retrouver le projet ici</p></a>
 </div>
